Added business logic and number check for user and balance (greater than 0)
