# api/swagger/swagger.yaml
@@ -19,9 +19,15 @@ produces:
   - application/json
 tags:
   - name: 'Users'
-    description: Operations about Netflix Users
+    description: Operations for Users
   - name: 'Authentication'
     description: Authentication operations
+  - name: 'Products'
+    description: Product operations
+  - name: 'Store'
+    description: Store operations
+  - name: 'Balance'
+    description: Balance change operations
 securityDefinitions:
   ApiKeyAuth:
     type: apiKey
@@ -240,7 +246,7 @@ paths:
     x-swagger-router-controller: users
     put:
       tags:
-        - balance
+        - Balance
       summary: Updated balance
       description: Updates the balance
       operationId: updateBalance
@@ -270,7 +276,7 @@ paths:
           description: User balance not found
     get:
       tags:
-        - balance
+        - Balance
       summary: Get balance
       description: ''
       operationId: getBalance
@@ -297,7 +303,7 @@ paths:
     x-swagger-router-controller: products
     get:
       tags:
-        - products
+        - Products
       summary: Returns inventories
       description: Returns the products
       operationId: getProduct
@@ -315,7 +321,7 @@ paths:
     x-swagger-router-controller: products
     post:
       tags:
-        - store
+        - Store
       summary: Place an order
       description: ''
       operationId: placeOrder
@@ -338,7 +344,7 @@ paths:
           description: Invalid Order
     get:
       tags:
-        - store
+        - Store
       summary: 'get transactions'
       operationId: getTransactions
       produces:
@@ -372,9 +378,8 @@ definitions:
         type: string
         example: 'Johnny Walker'
       balance:
-        type: integer
-        format: int64
-        default: 0
+        type: number
+        minimum: 0
   CreateUserResponse:
     properties:
       _id:
@@ -443,8 +448,8 @@ definitions:
         type: string
         example: 'jwalker'
       amount:
-        type: integer
-        format: int64
+        type: number
+        minimum: 0
         example: 213
   Transaction:
     type: object
